--- a/Assurance.html
+++ b/Assurance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domestic Sales</title>
+    <title>Assurance</title>
     <style>
         html, body {
             height: 100%;
@@ -19,6 +19,6 @@
     </style>
 </head>
 <body>
-    <iframe title="Sales Domestic Machine" src="https://app.powerbi.com/view?r=eyJrIjoiNDMxYjIxNWYtZmU5MS00OTgwLTlhZDQtMTBiODQ4NGVlMGJjIiwidCI6IjQyMDBlYWJlLTU4NDQtNDgwNS04MTAzLWI0MDIyNjhiOTg0YyJ9" allowfullscreen="true"></iframe>
+    <iframe title="Assurance" src="https://app.powerbi.com/view?r=eyJrIjoiMjA3MTAwOWEtMjgxYy00ZGUzLTljNDQtNGUwMWNmYWY1ZThjIiwidCI6IjQyMDBlYWJlLTU4NDQtNDgwNS04MTAzLWI0MDIyNjhiOTg0YyJ9" allowfullscreen="true"></iframe>
 </body>
 </html>
